--- a/Project_2/styles/style.css
+++ b/Project_2/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "Poppins-Bold";
-    src: url("../Poppins/Poppins-Bold.ttf") format("truetype");
+    font-family: "Manrope-Bold";
+    src: url("../Manrope/static/Manrope-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
   }
@@ -11,9 +11,15 @@
     font-style: normal;
   }
   @font-face {
-    font-family: "Manrope";
-    src: url("/fonts/poppins/Poppins-Medium.ttf") format("truetype");
+    font-family: "Manrope-Light";
+    src: url("/Manrope/static/Manrope-Light.ttf") format("truetype");
     font-weight: normal;
+    font-style: normal;
+  }
+  @font-face {
+    font-family: "Manrope-SemiBold";
+    src: url("../Manrope/static/Manrope-SemiBold.ttf") format("truetype");
+    font-weight: bold;
     font-style: normal;
   }
 
@@ -34,7 +40,7 @@ body{
     font-size: 50px;
     color: #333232;
     font-weight: bold;
-    font-family: "Poppins-Bold";
+    font-family: "Manrope-Bold";
 }
 
 .btn{
@@ -53,20 +59,49 @@ body{
     color: black;
     background-image: url(../images/spikes.svg);
     background-repeat: no-repeat;
-    padding: 230px 0;
+    padding: 240px 0;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.header-container img{
+    margin-top: 15rem;
+}
+.kartlar{
+    padding: 0px 50px;
+}
 
 .header-h{
     font-size: 45px;
     color: #484747;
-    font-family: "Manrope-Regular";
+    font-family: "Manrope-Bold";
+}
+.header-b{
+    font-size: 45px;
+    color: #484747;
+    font-family: "Manrope-Bold";
+}
+.header-s{
+    font-size: 45px;
+    color: #484747;
+    font-family: "Manrope-Bold";
+}
+.row-two{
+    margin-top: 20px;
 }
 
 .header-p{
+    font-size: 28px;
+    color: #5c5c5c;
+    font-weight: 300;
+    font-family: "Manrope-Regular";
+}
+.header img{
+    width: 5rem;
+    height: 5rem;
+}
+.res-p{
     font-size: 28px;
     color: #5c5c5c;
     font-weight: 300;
@@ -76,6 +111,14 @@ body{
 .contact-font{
     font-size: 18px;
 }
+
+.contact-text .row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
+
 
 .arrow-icn{
     font-size: 50px;
@@ -118,11 +161,44 @@ body{
     font-weight: 300;
     font-family: "Manrope-Regular";
 }
+.card-container{
+    padding: 0px 50px;
+    position: relative;
+    top: -7rem;
+}
+.scrollmenu {
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: scroll;
+}
+.info-container{
+    margin-top: 0px;
+}
+
+  .scrollmenu .row {
+    display: inline-block;
+    padding: 20px;
+}
 
 .bank-container{
-    width: 100%;
-    height: auto;
+    height: 115px;
     background-color: #ff5050;
+    margin-top: 15rem;
+}
+
+.bank-container .scrollmenu
+{
+    height: 100%;
+    width: 100%;
+}
+
+.bank-container .row
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    width: 1920px;
 }
 
 .clr{
@@ -152,13 +228,10 @@ body{
 .info-container{
     color: black;
     padding: 30px 0;
-    background-color: #f8f8f8;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    top: 100px;
 }
 
 .think{
@@ -175,7 +248,6 @@ body{
 .card-img-top img{
     width: 100px;
     height: 100px;
-    margin-bottom: 2rem;
 }
 
 .services-container{
@@ -190,9 +262,10 @@ body{
 
 .background{
     background-image: url(../images/backround_card.svg);
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     width: 100%;
+    margin-top: 100px;
 }
 
 .read{
@@ -200,8 +273,27 @@ body{
     text-align: left;
     width: 100%;
     padding-bottom: 70px;
+    display: flex;
+        gap: 30px;
+        justify-content: space-between;
+        width: 100%;
 }
-
+.card-container
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.card-container .card
+{
+    border-radius: 30px;
+    border-color: #ff5050;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
 .top{
     margin-top: 10rem;
 }
@@ -312,6 +404,7 @@ body{
     font-size: 14px;
     color: white;
     font-weight: 300;
+    text-align: right;
     font-family: "Manrope-Regular";
 }
 
@@ -375,14 +468,25 @@ body{
         font-size: 30px;
     }
     .header-h{
-      font-size: 25px;
+        font-size: 25px;
+    }
+    .header-b{
+        font-size: 25px;
+    }
+    .header-s{
+        font-size: 25px;
+    }
+    .res-p{
+        font-size: 15px;
+        padding: 0px;
     }
     .header-p{
         font-size: 15px;
         padding: 0px;
     }
-    .arrow-icn{
-        font-size: 30px;
+    .header img{
+        width: 3rem;
+        height: 3rem;
     }
     .txt{
         font-size: 10px;
@@ -406,6 +510,9 @@ body{
     .footer-bar{
         font-size: 1rem;
     }
+    .kartlar{
+        padding: 0px 20px;
+    }
     .namebox{
         width: 100%;
         height: 30px;
@@ -413,6 +520,9 @@ body{
     .mailbox{
         width: 100%;
         height: 30px;
+    }
+    .mailbox::placeholder{
+        text-align: left;
     }
     .detailbox{
         width: 100%;
@@ -467,5 +577,295 @@ body{
     }
     .background{
         background-size: 400rem;
+    }
+    .card-space
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+    }
+}
+
+@media (min-width: 1920px){
+    .navbar .container{
+        max-width: 175rem;
+    }
+    .eklenti{
+        font-size: 60px;
+        color: #333232;
+        font-weight: bold;
+        font-family: "Manrope-Bold";
+    }
+    .btn{
+        font-size: 20px;
+        color: #333232;
+        font-weight: 300;
+        font-family: "Manrope-Regular";
+        padding-top: 1.2rem;
+    }
+    .btn-active{
+        font-size: 17px;
+        color: #f2f2f2;
+        font-weight: 400;
+        font-family: "Manrope-Regular";
+        width: 153px;
+        height: 55px;
+        border-radius: 5px;
+        background-color: #ff5050;
+    }
+    .header-h{
+        font-size: 60px;
+        color: #484747;
+        font-family: "Manrope-Bold";
+        margin-top: 25rem;
+    }
+    .header-s{
+        font-size: 60px;
+        color: #484747;
+        font-family: "Manrope-Bold";
+    }
+    .header-container{  
+        background-size: 30% 165%;
+        background-repeat: no-repeat;
+        padding: 80px 0;
+    }
+    .header-b{
+        font-size: 60px;
+        color: #484747;
+        font-family: "Manrope-Bold";
+    }
+    .res-p{
+        font-size: 45px;
+        color: #5c5c5c;
+        font-weight: 300;
+        font-family: "Manrope-Light";
+    }
+    .header-p{
+        font-size: 36px;
+        color: #555555;
+        font-weight: 300;
+        font-family: "Manrope";
+        padding-top: 2px;
+    }
+    .header-container img{
+        margin-top: 40rem;
+    }
+    .header .txt{
+        width: 1720px;
+        height: 289px;
+        font-size: 30px;
+        line-height: 50px;
+        color: #555555;
+        font-weight: 300;
+        font-family: "Manrope";
+    }
+
+    .header-f{
+        font-size: 36px;
+        color: #555555;
+        font-weight: 300;
+        font-family: "Manrope";
+    }
+    .promotion-container .txt{
+        padding-top: 5rem;
+    }
+    .bank-container{
+        height: 115px;
+        background-color: #ff5050;
+        margin-top: 15rem;
+    }
+    .bank-container .scrollmenu
+    {
+        height: 100%;
+    }
+    .bank-container .row
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        height: 100%;
+        width: 100%;
+    }
+    .clr{
+        width: 391px;
+        height: 460px;
+        border-radius: 10px;
+        background-color: #f5f2f2;
+    }
+    .card-title{
+        font-size: 27px;
+        line-height: 29px;
+        color: #3e3d3d;
+        font-weight: 600;
+        font-family: "Manrope";
+        text-align: center;
+    }
+    .title-start
+    {
+        text-align: start;
+        font-family: "Manrope-SemiBold";
+    }
+    .continue.text-muted{
+        opacity: 0.569;
+        font-size: 14px;
+        line-height: 20px;
+        color: #3e3d3d;
+        font-weight: 300;
+        font-family: "Manrope";
+        padding-top: 3rem;
+    }
+    
+    .d-text{
+        width: 428px;
+        height: 150px;
+        font-size: 20px;
+        line-height: 29px;
+        color: #3e3d3d;
+        font-weight: 300;
+        text-align: left;
+        font-family: "Manrope";
+    }
+    .t-text{
+        height: 146px;
+        font-size: 20px;
+        line-height: 29px;
+        color: #4d4d4d;
+        font-weight: 300;
+        font-family: "Manrope";
+        text-align: center;
+    }
+    .kartlar
+    {
+        padding: 0 200px;
+        display: flex;
+        flex-direction: column;
+        gap: 100px;
+    }
+    .card-deck{
+        display: flex;
+        gap: 173px;
+    }
+    .card-body{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .card.frm{
+        width: 735px;
+        height: 293px;
+        border-radius: 40px;
+        background-color: #ffffff;
+        border: 1px solid #ff5050;
+    }
+    .lc{
+        width: 425px;
+        height: 174px;
+        border-radius: 29px;
+        background-color: #f5f2f2;
+    }
+    .contact-font{
+        font-size: 31px;
+        line-height: 46px;
+        color: #3e3d3d;
+        font-family: "Manrope-Bold";
+    }
+    .namebox{
+        opacity: 0.867;
+        width: 260px;
+        height: 62px;
+        border-radius: 10px;
+        background-color: #f5f5f5;
+        border: 2px solid #ff5050;
+    }
+    .mailbox{
+        opacity: 0.867;
+        width: 260px;
+        height: 62px;
+        border-radius: 10px;
+        background-color: #ff5050;
+    }
+    .txtbox{
+        opacity: 0.867;
+        width: 550px;
+        height: 62px;
+        border-radius: 10px;
+        background-color: #ff5050;
+    }
+    .detailbox{
+        opacity: 0.867;
+        width: 550px;
+        height: 400px;
+        border-radius: 10px;
+        background-color: #ff5050;
+    }
+    .send-btn{
+        width: 137px;
+        height: 52px;
+        border-radius: 10px;
+        background-color: #f7f0f0;
+        opacity: 0.737;
+        font-size: 14px;
+        color: #262323;
+        font-weight: 300;
+        font-family: "Manrope";
+    }
+    .footer-bar{
+        opacity: 0.827;
+        width: 1920px;
+        height: 68px;
+        background-color: #ff5050;
+        display: flex;
+        align-items: center;
+        padding: 0px 20rem;
+    }
+    .footer-bar-txt.txt-left{
+        font-size: 19px;
+        color: #ffffff;
+        font-weight: 300;
+        font-family: "Manrope"; text-align: left;
+    }
+    .footer-bar-txt.txt-right{
+        font-size: 19px;
+        color: #ffffff;
+        font-weight: 300;
+        font-family: "Manrope"; text-align: right;
+    }
+    .card-img-top img{
+        width: 117px;
+        height: 117px;
+    }
+    .contact-text .row{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 90px;
+    }
+    .contact-text img{
+        width: 117px;
+        height: 117px;
+    }
+    .contact-form .form-control{
+        padding: 20px 20px;
+    }
+    .line{
+        padding-top: 2rem;
+    }
+    .tsr{
+        font-family: "Manrope-Regular";
+        position: relative;
+        top: -20px;
+    }
+    .location .contact-font{
+        width: 290px;
+        height: 88px;
+    }
+    .contact-text{
+        margin-top: 15rem;
+    }
+    .header img{
+        width: 65px;
+        height: 65px;
     }
 }
