--- a/Project_2/styles/style.css
+++ b/Project_2/styles/style.css
@@ -640,7 +640,7 @@ body{
         font-size: 45px;
         color: #5c5c5c;
         font-weight: 300;
-        font-family: "Manrope-Light";
+        font-family: "Manrope-Regular";
     }
     .header-p{
         font-size: 36px;
