--- a/Project_3/dropdown-alpine-js/style.css
+++ b/Project_3/dropdown-alpine-js/style.css
@@ -1,17 +1,39 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: rgb(110, 175, 255);
 }
+
 header {
     background-color: #333;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 20px;
+    align-items: center;
+    border-radius: 15px;
 }
+
+.menu-button {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.menu-button .mn {
+    margin-right: 50px;
+    transition: background-color 0.3s;
+    opacity: 0.5;
+    font-size: 16px;
+}
+
+.menu-button button:hover {
+    opacity: 1;
+}
+
+.arrow {
+    font-size: 12px;
+}
+
 button {
     background-color: transparent;
     border: none;
@@ -19,30 +41,32 @@ button {
     cursor: pointer;
     padding: 10px;
 }
-.drp{
+
+.drp {
     padding: 0;
+    line-height: 2rem;
     color: #333;
     text-align: left;
-    font-size: 10px;
+    font-size: 11px;
+    margin-right: 50px;
 }
+
 .menu {
     position: relative;
 }
+
 .menu-content {
-    width: 95px;
+    width: 100%;
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     padding: 10px;
-    top: 100%;
     right: 0;
     transition: 0.5s;
+    font-size: 10px;
+    border-radius: 3px;
 }
+
 .menu:hover .menu-content {
     display: block;
-}
-.menu-button {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
 }
